# billing-rust

./: .gitignore  Cargo.toml  README.md  updateapi
.openapi-generator/: FILES
docs/: BankAccount.md  BankAccountApi.md  BankAccountData.md  Currency.md  CurrencyData.md  Customer.md  CustomerApi.md  CustomerData.md  DetailedInvoice.md  Invoice.md  InvoiceApi.md  InvoiceData.md  InvoicePosition.md  NewBankAccount.md  NewCustomer.md  NewInvoice.md  NewInvoicePosition.md  Salutation.md
src/apis/: bank_account_api.rs  configuration.rs  customer_api.rs  invoice_api.rs  mod.rs
src/models/: bank_account.rs  bank_account_data.rs  currency.rs  currency_data.rs  customer.rs  customer_data.rs  detailed_invoice.rs  invoice.rs  invoice_data.rs  invoice_position.rs  mod.rs  new_bank_account.rs  new_customer.rs  new_invoice.rs  new_invoice_position.rs  salutation.rs
